@@ -23,6 +23,7 @@ For users:
        to define default language for document generation.
 - New: Can reopen a closed supplier invoice.
 - New: Move permission "see hidden categories" into "see hidden products/services".
+- New: Can delete several files at once in FTP module.
 - Fix: Format number was wrong for ar_AR language.
 - Fix: Can change password if has only permission change password.
 - Fix: Project PDF document show the tasks.
